--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-google-generativeai>=0.3.0
+streamlit>=1.28.0
 pandas>=2.0.0
 numpy>=1.24.0
-python-dotenv>=1.0.0
-pydantic>=2.0.0
-tqdm>=4.65.0
+google-generativeai>=0.3.0
+google-auth>=2.23.0
+google-auth-oauthlib>=1.1.0
+google-auth-httplib2>=0.1.1
+google-api-python-client>=2.100.0
+plotly>=5.17.0
 requests>=2.31.0
